# codesharing-VGR-RAG

./: README.md
large-model-setups/large-model-setup-windows/: README.md  chat_memory.py  chat_session.py  docker-compose.yaml  embedding_data.py  main_prompt_old.py  model_onnx_export.py  profile_manager.py  prompt.py  pyproject.toml
large-model-setups/large-model-setup-windows/chunks_test/: Commission Guidelines on AI Prohibitions_001.md  Commission Guidelines on AI Prohibitions_009.md  Commission Guidelines on AI Prohibitions_017.md  Commission Guidelines on AI Prohibitions_022.md  Commission Guidelines on AI Prohibitions_027.md  Commission Guidelines on AI Prohibitions_030.md  Commission Guidelines on AI Prohibitions_047.md  Commission Guidelines on AI Prohibitions_051.md  Commission Guidelines on AI Prohibitions_054.md  Commission Guidelines on AI Prohibitions_055.md  Commission Guidelines on AI Prohibitions_056.md  Commission Guidelines on AI Prohibitions_057.md  Commission Guidelines on AI Prohibitions_058.md  Commission Guidelines on AI Prohibitions_066.md  Commission Guidelines on AI Prohibitions_067.md  Commission Guidelines on AI Prohibitions_074.md  Commission Guidelines on AI Prohibitions_079.md  Commission Guidelines on AI Prohibitions_082.md  Commission Guidelines on AI Prohibitions_089.md  Commission Guidelines on AI Prohibitions_092.md  Commission Guidelines on AI Prohibitions_097.md  Commission Guidelines on AI Prohibitions_099.md  Commission Guidelines on AI Prohibitions_102.md  Commission Guidelines on AI Prohibitions_103.md  EU AI Act_001.md  (+120 more)
(+544 files in other folders)
